# blink

./: .gitattributes  .gitignore  .gitmodules  .luarc.json  CMakeLists.txt  README.md  blink  build.sh  run.sh
cli/: .gitignore  CMakeLists.txt
cli/src/: main.cpp  pch.h
cli/src/commands/: BuildProjectCommand.cpp  BuildProjectCommand.h  CompileShadersCommand.cpp  CompileShadersCommand.h  CopyResourcesCommand.cpp  CopyResourcesCommand.h  RunProjectCommand.cpp  RunProjectCommand.h  build.cpp  commands.h  compileLua.cpp  compileShaders.cpp  generate.cpp  run.cpp  shaders.cpp
cmake/: build.cmake  compile_lua.cmake  compile_shaders.cmake  copy_models.cmake  copy_skyboxes.cmake  copy_textures.cmake  generate.cmake  install_cli.cmake  res.cmake  run.cmake
lib/glfw-3.3/examples/: boing.c
lib/lua-5.4.0/: CMakeLists.txt
lua/: ai_patrol_circle.lua  ai_patrol_line.lua  camera.lua  entity.lua  main.lua  player.lua  scene_camera.lua  utils.lua  vector.lua
lua/entities/: camera.lua  player.lua
lua/scenes/: sandbox.lua  viking_room.lua
lua/scenes/rotation_test/: rotation_test.lua
lua/scenes/rotation_test/entities/: fighter_jet_pitch.lua  fighter_jet_pitch_and_roll.lua  fighter_jet_roll.lua  fighter_jet_yaw.lua  fighter_jet_yaw_and_pitch.lua  fighter_jet_yaw_and_roll.lua  fighter_jet_yaw_pitch_and_roll.lua  pitch.lua  pitch_and_roll.lua  roll.lua  yaw.lua  yaw_and_pitch.lua  yaw_and_roll.lua  yaw_pitch_and_roll.lua
lua/scenes/sandbox/: sandbox.lua
lua/scenes/sandbox/entities/: ai_patrol_line.lua  camera.lua  church_indoor_camera.lua  church_roof_camera.lua  church_spinner.lua  line_patrol.lua  line_patrol_camera.lua  mothership.lua  player.lua  roll_patrol.lua  roll_patrol_camera.lua
lua/scenes/viking_room/: viking_room.lua
res/: config.lua  main.lua
res/models/camera/: 11673_camera_v1_L3.mtl
res/models/oxar_freighter/Meshes/: oxar_freighter.mtl
res/models/sibenik/: sibenik.mtl
res/models/terrain/: terrain.mtl
res/shaders/: mesh.frag  mesh.vert  shader.frag  shader.vert  skybox.frag  skybox.vert  texture.frag.glsl  texture.vert.glsl
scripts/: all.sh  build.sh  cli.sh  compile_lua.sh  install_cli.sh  res.sh  run.sh
src/: App.cpp  App.h  AppConfig.h  AppContext.cpp  AppContext.h  Application.cpp  Application.h  Config.h  DependencyContainer.cpp  DependencyContainer.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  FileSystem.cpp  FileSystem.h  Game.cpp  Game.h  GameModule.cpp  GameModule.h  GraphicsContext.cpp  GraphicsContext.h  Log.cpp  Log.h  LuaBinding.cpp  LuaBinding.h  LuaBindingListener.h  LuaClient.cpp  LuaClient.h  LuaEngine.cpp  LuaEngine.h  LuaEngineListener.h  LuaGraphicsBinding.cpp  LuaGraphicsBinding.h  LuaGraphicsEngine.cpp  LuaGraphicsEngine.h  LuaPrintStack.cpp  LuaPrintStack.h  Renderer.cpp  Renderer.h  (+8 more)
src/game/: Camera.cpp  Camera.h  Components.h  Game.cpp  Game.h  GameModule.cpp  GameModule.h  Keyboard.cpp  Keyboard.h  Scene.cpp  Scene.h  config.lua  main.lua
src/game/foo/: camera.h  camera_keys.h  camera_mouse.h  camera_rotate.h
src/graphics/: GraphicsModule.cpp  GraphicsModule.h  Image.cpp  Image.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  Model.h  PushConstantData.h  Quad.h  Renderer.cpp  Renderer.h  ResourceLoader.cpp  ResourceLoader.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  SimplePushConstantData.h  Skybox.cpp  Skybox.h  SkyboxManager.cpp  SkyboxManager.h  Texture.cpp  Texture.h  UniformBufferData.h  UniformBufferObject.h  Vertex.h  VertexAttribute.cpp  VertexAttribute.h  VertexBuffer.cpp  VertexBuffer.h  ViewProjection.h  Vulkan.cpp  Vulkan.h  VulkanApp.cpp  VulkanApp.h  (+26 more)
src/lua/: CoordinateSystemLuaBinding.cpp  CoordinateSystemLuaBinding.h  EntityBinding.cpp  EntityBinding.h  EntityLuaBinding.cpp  EntityLuaBinding.h  GlmLuaBinding.cpp  GlmLuaBinding.h  KeyboardLuaBinding.cpp  KeyboardLuaBinding.h  LuaBinding.cpp  LuaBinding.h  LuaEngine.cpp  LuaEngine.h  LuaFunction.h  LuaModule.cpp  LuaModule.h  MouseLuaBinding.cpp  MouseLuaBinding.h  SceneCameraLuaBinding.cpp  SceneCameraLuaBinding.h  SkyboxLuaBinding.cpp  SkyboxLuaBinding.h  WindowLuaBinding.cpp  WindowLuaBinding.h  enemy.lua  luaUtils.cpp  luaUtils.h  printLua.cpp  printLua.h
src/lua/old/: LuaClient.cpp  LuaClient.h  LuaEngine.cpp  LuaEngineListener.h
src/scene/: Camera.cpp  Camera.h  Components.h  CoordinateSystem.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h
src/system/: Assert.h  Debug.h  Environment.h  Error.cpp  Error.h  ErrorSignal.cpp  ErrorSignal.h  FileSystem.cpp  FileSystem.h  ImageFile.cpp  ImageFile.h  Log.cpp  Log.h  ObjFile.h  Random.cpp  Random.h  Signal.cpp  Signal.h  SystemModule.cpp  SystemModule.h  Timer.cpp  Timer.h  Uuid.cpp  Uuid.h
src/utils/: size.h  utils.cpp  utils.h
src/window/: Event.cpp  Event.h  KeyEvent.cpp  KeyEvent.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  MouseEvent.cpp  MouseEvent.h  Window.cpp  Window.h  WindowEvent.cpp  WindowEvent.h  WindowModule.cpp  WindowModule.h
